<resources>
    <string name="app_name">NavDrawerBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading...</string>

    <string name="action_settings">Settings</string>
    <string name="introduction">INTRODUCTION</string>
    <string name="chapter_1">CHAPTER 1</string>
    <string name="chapter_2">CHAPTER 2</string>
    <string name="chapter_3">CHAPTER 3</string>
    <string name="chapter_4">CHAPTER 4</string>
    <string name="chapter_5">CHAPTER 5</string>
    <string name="chapter_6">CHAPTER 6</string>
    <string name="chapter_7">CHAPTER 7</string>
    <string name="chapter_8">CHAPTER 8</string>
    <string name="chapter_9">CHAPTER 9</string>
    <string name="chapter_10">CHAPTER 10</string>
    <string name="chapter_11">CHAPTER 11</string>
    <string name="chapter_12">CHAPTER 12</string>
    <string name="chapter_13">CHAPTER 13</string>
    <string name="chapter_14">CHAPTER 14</string>
    <string name="chapter_15">CHAPTER 15</string>
    <string name="chapter_16">CHAPTER 16</string>
    <string name="chapter_17">CHAPTER 17</string>
    <string name="chapter_18">CHAPTER 18</string>
    <string name="chapter_19">CHAPTER 19</string>
    <string name="chapter_20">CHAPTER 20</string>
    <string name="chapter_21">CHAPTER 21</string>
    <string name="about_author">ABOUT AUTHOR</string>

    <string-arrays name="chapter_arrays">
        <item>INTRODUCTION</item>
        <item>CHAPTER 1</item>
        <item>CHAPTER 2</item>
        <item>CHAPTER 3</item>
        <item>CHAPTER 4</item>
        <item>CHAPTER 5</item>
        <item>CHAPTER 6</item>
        <item>CHAPTER 7</item>
        <item>CHAPTER 8</item>
        <item>CHAPTER 9</item>
        <item>CHAPTER 10</item>
        <item>CHAPTER 11</item>
        <item>CHAPTER 12</item>
        <item>CHAPTER 13</item>
        <item>CHAPTER 14</item>
        <item>CHAPTER 15</item>
        <item>CHAPTER 16</item>
        <item>CHAPTER 17</item>
        <item>CHAPTER 18</item>
        <item>CHAPTER 19</item>
        <item>CHAPTER 20</item>
        <item>CHAPTER 21</item>
        <item>ABOUT AUTHOR</item>
    </string-arrays>






</resources>
